--- a/Example.ipynb
+++ b/Example.ipynb
@@ -105,16 +105,7 @@
     }
    ],
    "source": [
-    "stack.data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = np.mean(stack.data, axis=0)"
+    "image = stack.average()"
    ]
   },
   {
@@ -146,7 +137,7 @@
     }
    ],
    "source": [
-    "plt.imshow(image)"
+    "image.plot()"
    ]
   },
   {
@@ -180,7 +171,7 @@
     "                       #method='direct',\n",
     "                       upsampling=True)\n",
     "start = time.time()\n",
-    "labels = seg.perform_clustering(image)\n",
+    "labels = seg.perform_clustering(image.data)\n",
     "print ('time_cost: %6.2f[s]' %(time.time()-start,))"
    ]
   },
@@ -233,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
